test/compilable/test17130.d
class Base
{
    this() shared
    {}

    this()
    {}
}

class Derived : Base
{
    this()
    {
        // implicit super();
    }
}
