test/fail_compilation/fail313.d
class Base {
    abstract int str();
}
class Derived : Base {
    override str() {
        return "string";
    }
}
